Updates from feedback

--- a/calico-enterprise/network-policy/application-layer-policies/alp.mdx
+++ b/calico-enterprise/network-policy/application-layer-policies/alp.mdx
@@ -20,7 +20,8 @@ Application layer policies let you configure access controls based on L7 attribu
 
 :::important
 
-When you enable application layer policy for a deployment, all of that deployment's pods will restart.
+When you enable application layer policy for a deployment, all of that deployment's pods will restart
+Active connections may be disrupted.
 
 :::
 
