--- a/calico-enterprise/visibility/elastic/l7/configure.mdx
+++ b/calico-enterprise/visibility/elastic/l7/configure.mdx
@@ -32,13 +32,13 @@ L7 logs are visible in the Manager UI, service graph, in the HTTP tab.
 
 ### Limitations
 
-* L7 logging is not compatible with a service mesh such as Istio.
+* L7 log collection is not compatible with a service mesh such as Istio.
 * L7 log collection is not supported for host-networked client pods.
-* When selecting and deselecting traffic for L7 log collection, active connections may be disrupted.
 
 :::important
 
-When you enable application layer policy for a deployment, all of that deployment's pods will restart.
+When you enable L7 log collection for a deployment, all of that deployment's pods will restart.
+Selecting and deselecting traffic for L7 log collection may result in disruptions for active connections.
 
 :::
 
