--- a/calico-enterprise/threat/configuring-webhooks.mdx
+++ b/calico-enterprise/threat/configuring-webhooks.mdx
@@ -25,4 +25,9 @@ See [Sending messages using Incoming Webhooks](https://api.slack.com/messaging/w
 1. In Manager UI, select **Activity** > **Webhooks**, and then click **Create your first webhook**.
 2. Enter a **Name** for your webhook, select which **Event types** you want to get alerts for, and, under **Type**, select whether to configure the webhook for Slack, Jira, or for generic JSON output.
 3. Complete the fields for your webhook type and click **Create Webhook**.
+4. To check that your webhook is working, find the webhook on the **Webhooks** page and click **Actions** > **Test Webhook**. If your webhook is set up correctly, you should generate a HTTP response.
 
+```bash title="Example: Successful HTTP response"
+200 OK
+Webhook sent successfully
+```
