--- a/calico-enterprise/operations/ebpf/install.mdx
+++ b/calico-enterprise/operations/ebpf/install.mdx
@@ -52,10 +52,7 @@ eBPF supports AKS with Calico CNI and {{prodname}} network policy. However, with
 :::
 
 **Unsupported features**
-- Using NodeLocal DNSCache in your cluster
 - Clusters with some eBPF nodes and some standard dataplane and/or Windows nodes
-- IPv6
-- Host endpoint `doNotTrack` policy (other policy types are supported)
 - Floating IPs
 - SCTP (either for policy or services)
 - `Log` action in policy rules
@@ -416,6 +413,12 @@ Then, should you want to start `kube-proxy` again, you can simply remove the nod
 
 </TabItem>
 </Tabs>
+
+:::note
+
+If you are running kube-proxy in IPVS mode, switch to iptables mode before disabling.
+
+:::
 
 ## Next steps
 
