--- a/calico/operations/ebpf/install.mdx
+++ b/calico/operations/ebpf/install.mdx
@@ -442,6 +442,12 @@ Then, should you want to start `kube-proxy` again, you can simply remove the nod
 </TabItem>
 </Tabs>
 
+:::note
+
+If you are running kube-proxy in IPVS mode, switch to iptables mode before disabling.
+
+:::
+
 ## Next steps
 
 **Recommended**
