--- a/calico/network-policy/policy-tiers/tiered-policy.mdx
+++ b/calico/network-policy/policy-tiers/tiered-policy.mdx
@@ -53,15 +53,11 @@ The default tier is where:
 
 ## AdminNetworkPolicy tier:
 
-The AdminNetworkPolicy tier is created during installation and has the order of 1,000.
-
-The AdminNetworkPolicy tier is where:
-
-- You manage all Kubernetes admin network policies
+The AdminNetworkPolicy tier where all [Kubernetes admin network policies](https://network-policy-api.sigs.k8s.io/reference/examples/) reside. It is automatically created during installation and has the order of 1,000.
 
 ## Tier order
 
-Tiers are ordered from left to right, starting with the highest priority (also called highest precedence) tiers.
+Tiers are ordered based on their orders, starting from the lowest order (the highest priority) tiers.
 
 ![tier-order](/img/calico-enterprise/tier-order.png)
 
@@ -69,7 +65,7 @@ In the example above, tier priorities are as follows:
 
 - **security tier** - is higher priority than platform tier
 - **platform tier** - is higher priority than default tier
-- **default tier** - is the lowest priority than the rest
+- **default tier** - is the lowest priority
 
 ## Policy processing
 
