--- a/calico-cloud/network-policy/policy-tiers/tiered-policy.mdx
+++ b/calico-cloud/network-policy/policy-tiers/tiered-policy.mdx
@@ -52,7 +52,7 @@ kubectl apply -f security.yaml
 
 ## The default tier:
 
-The default tier is created during installation and has the order of 1,000,000.
+The AdminNetworkPolicy tier where all [Kubernetes admin network policies](https://network-policy-api.sigs.k8s.io/reference/examples/) reside. It is automatically created during installation and has the order of 1,000. This value is fixed, and cannot be changed.
 
 ![default tier](/img/calico-cloud/default-tier.png)
 
@@ -100,13 +100,13 @@ In the example above, tier priorities are as follows:
 
 - **security tier** - is higher priority than platform tier
 - **platform tier** - is higher priority than default tier
-- **default tier** - is the lowest priority than the rest
+- **default tier** - is the lowest priority
 
 The tier you put as the highest priority (after system tiers), depends on your environment. In compliance-driven environments, the security tier may be the highest priority (as shown above). There is no one-size-fits-all order.
 
 ## Policy processing
 
-Policies are processed in sequential order from top to bottom.
+Policies are processed in sequential order from lowest order (highest priority) to highest order (lowest priority), which is from top to bottom in the following diagram.
 
 ![policy processing](/img/calico-cloud/policy-processing.png)
 
@@ -140,19 +140,51 @@ The following diagrams show the relationship between all of the elements that af
 ### Implicit default deny
 
 As shown in the following diagram, at the end of each tier is an implicit default deny. This is a safeguard that helps mitigate against unsecured policy.
-To override the implicit default deny, and to allow traffic evaluation to continue, you can change tier's default action to **Pass**.
+Because of this safeguard, you must either explicitly update tier's default action to **Pass** or apply a Pass action rule when you want traffic evaluation to continue.
+In the following example, the Pass action in a policy ensures that traffic evaluation continues, and overrides the implicit default deny.
 
-![implicit deny](/img/calico-cloud/implicit-deny.svg)
+![implicit-deny](/img/calico-cloud/implicit-deny.svg)
 
+Let’s look at a Dev/Ops global network policy in a high precedence tier (Platform). The policy denies ingress and egress traffic to workloads that match selector, `env == "stage"`. To ensure that policies continue to evaluate traffic after this policy, the policy adds a Pass action for both ingress and egress.
+
+**Pass action rule example**
+
+```yaml
+apiVersion: projectcalico.org/v3
+kind: GlobalNetworkPolicy
+metadata:
+  name: devops.stage-env
+spec:
+  tier: devops
+  order: 255
+  selector: env == "stage"
+  ingress:
+    - action: Deny
+      source:
+        selector: env != "stage"
+    - action: Pass
+  egress:
+    - action: Deny
+      destination:
+        selector: env != "stage"
+    - action: Pass
+  types:
+    - Ingress
+    - Egress
+```
+
+The other option, is to update tier's default action to **Pass** to override the implicit default deny.
+
+**Pass default action tier example**
 
 ```yaml
 apiVersion: projectcalico.org/v3
 kind: Tier
 metadata:
-  name: security
+  name: devops
 spec:
   order: 300
-  defaultAction: Pass
+  defautlAction: Pass
 ```
 
 ### Policy endpoint matching across tiers
