--- a/calico/network-policy/policy-tiers/tiered-policy.mdx
+++ b/calico/network-policy/policy-tiers/tiered-policy.mdx
@@ -43,7 +43,7 @@ kubectl apply -f security.yaml
 
 ## The default tier:
 
-The default tier is created during installation and has the order of 1,000,000.
+The default tier is created during installation and has the order of 1,000,000. This value is fixed, and cannot be changed. The desire is to evaluate policies in the default tier as last.
 
 The default tier is where:
 
@@ -53,25 +53,15 @@ The default tier is where:
 
 ## AdminNetworkPolicy tier:
 
-The AdminNetworkPolicy tier where all [Kubernetes admin network policies](https://network-policy-api.sigs.k8s.io/reference/examples/) reside. It is automatically created during installation and has the order of 1,000.
+The AdminNetworkPolicy tier where all [Kubernetes admin network policies](https://network-policy-api.sigs.k8s.io/reference/examples/) reside. It is automatically created during installation and has the order of 1,000. This value is fixed, and cannot be changed.
 
 ## Tier order
 
 Tiers are ordered based on their orders, starting from the lowest order (the highest priority) tiers.
 
-![tier-order](/img/calico-enterprise/tier-order.png)
-
-In the example above, tier priorities are as follows:
-
-- **security tier** - is higher priority than platform tier
-- **platform tier** - is higher priority than default tier
-- **default tier** - is the lowest priority
-
 ## Policy processing
 
-Policies are processed in sequential order from top to bottom.
-
-![policy-processing](/img/calico-enterprise/policy-processing.png)
+Policies are processed in sequential order from lowest order (highest priority) to highest order (lowest priority).
 
 Two mechanisms drive how traffic is processed across tiered policies:
 
@@ -103,9 +93,40 @@ The following diagrams show the relationship between all of the elements that af
 ### Implicit default deny
 
 As shown in the following diagram, at the end of each tier is an implicit default deny. This is a safeguard that helps mitigate against unsecured policy.
-To override the implicit default deny, and to allow traffic evaluation to continue, you can change tier's default action to **Pass**.
+Because of this safeguard, you must either explicitly update tier's default action to **Pass** or apply a Pass action rule when you want traffic evaluation to continue.
+In the following example, the Pass action in a policy ensures that traffic evaluation continues, and overrides the implicit default deny.
 
 ![implicit-deny](/img/calico-enterprise/implicit-deny.svg)
+
+Let’s look at a Dev/Ops global network policy in a high precedence tier (Platform). The policy denies ingress and egress traffic to workloads that match selector, `env == "stage"`. To ensure that policies continue to evaluate traffic after this policy, the policy adds a Pass action for both ingress and egress.
+
+**Pass action rule example**
+
+```yaml
+apiVersion: projectcalico.org/v3
+kind: GlobalNetworkPolicy
+metadata:
+  name: devops.stage-env
+spec:
+  tier: devops
+  order: 255
+  selector: env == "stage"
+  ingress:
+    - action: Deny
+      source:
+        selector: env != "stage"
+    - action: Pass
+  egress:
+    - action: Deny
+      destination:
+        selector: env != "stage"
+    - action: Pass
+  types:
+    - Ingress
+    - Egress
+```
+
+The other option, is to update tier's default action to **Pass** to override the implicit default deny.
 
 **Pass default action tier example**
 
@@ -113,7 +134,7 @@ To override the implicit default deny, and to allow traffic evaluation to contin
 apiVersion: projectcalico.org/v3
 kind: Tier
 metadata:
-  name: security
+  name: devops
 spec:
   order: 300
   defautlAction: Pass
